*** empty log message ***

--- a/jollix/public_html/de/de_home.html
+++ b/jollix/public_html/de/de_home.html
@@ -44,6 +44,10 @@
 			</td>
 			<td valign="top">
 				<font size="+1"><b>News & Ankündigungen:<b></font><br><br>
+				<b><i>25.05.03</i></b> - <b>ATI Unterstützung, ISDN + mehr.</b> Die ersten Versuche mit dem neuen Linux Triber
+				von ATI sind sehr vielversprechend; In Kürze wird auch ISDN funktionieren; In der kommenden
+				Version 0.2 ist das aktuelle KDE 3.2.1 enthalten; Ein neues Logo sowie eine sehenswerte Flash-Animation
+				wird ebenfalls entwickelt. Ihr dürft gespannt sein ;-)<br><br> 
 				<b><i>06.05.03</i></b> - <b>Betatester gesucht!</b> Wenn du Interesse hast, die 
 				jeweils aktuelle Beta-Release auf Herz und Nieren zu testen, 
 				<a href="http://jollix.berlios.de/phpBB2/viewtopic.php?t=29">nimm &uuml;ber das Forum 
@@ -61,15 +65,7 @@
 				<b><i>01.05.03</i></b> - Wegen der Zusammenarbeit mit den Machern von <a href="http://www.public-enemy.de" target="_blank">Public Enemy</a>
 				ist eine neue Release von jollix <a href="http://developer.berlios.de/project/showfiles.php?group_id=666&release_id=865" target="parent">online</a>. <b>Jollix 0.1.1</b> erlaubt nun, neben Counter-Strike auch
 				eine Festplatten Installation von <a href=" http://www.public-enemy.de" target="_blank">Public Enemy: The Dark Future</a> (80000 Downloads am ersten Tag!)
-				unter jollix einzurichten und zu spielen. Ausserdem gibt es einige Bugfixes.<br><br>
-				<b><i>25.04.03</i></b> - Die kommende Woche erscheinende Half-Life Modifikation
-				<a href="http://www.public-enemy.de" target="_blank">Public Enemy</a> wird von 
-				der jollix 0.1 LiveCD unterstützt. So ist es nun auch möglich, die allerneuste
-				MOD der HL-Szene mit der jollix 0.1 LiveCD zu spielen, ohne Linux auf
-				der Festplatte installieren zu müssen.<br>
-				<a href="http://www.public-enemy.de" target="_blank">Public Enemy</a> spielt in einer düsteren Zukunft, welche wir aus Büchern, Comics,
-				Filmen und Spielen wie BladeRunner, ShadowRun, Cyberpunk, Syndicate (Wars) oder DeusEx kennen.
-				Die jollix Entwickler und das Team von Public Enemy kündigen eine gemeinsame Kooperation an.<br><br>
+				unter jollix einzurichten und zu spielen. Ausserdem gibt es einige Bugfixes.<br><br>				
 			</td>
 		</tr>
   </tbody>
