--- a/jollix/public_html/en/en_home.html
+++ b/jollix/public_html/en/en_home.html
@@ -44,6 +44,9 @@
 			</td>
 			<td valign="top">
 				<font size="+1"><b>News & Announcements:<b></font><br><br>
+				<b><i>25.05.03</i></b> - <b>ATI support, ISDN + more.</b> The new ATI Linux driver 
+				seems to work well; ISDN will work too; the next release 0.2 comes with KDE 3.2.1;
+				a new Logo and an exciting flash-Animation is currently devoloped by the community<br><br> 
 				<b><i>06.05.03</i></b> - <b>Betatesters wanted!</b> In case you are interested in
 				testing the current beta-release of jollix,
 				<a href="http://jollix.berlios.de/phpBB2/viewtopic.php?t=29">get in contact with ViVa</a>
