--- a/jollix/public_html/de/de_news.html
+++ b/jollix/public_html/de/de_news.html
@@ -1,4 +1,4 @@
-<!DOCTYPE public "-//w3c//dtd html 4.01 transitional//en" 
+<!DOCTYPE public "-//w3c//dtd html 4.01 transitional//en"
 		"http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
@@ -43,9 +43,9 @@
 			</center>
 			</td>
 			<td valign="top"><font size="+1"><b>News:<b></font><br><br>
-				<b><i>25.05.03</i></b> - <b>ATI Unterstützung, ISDN + mehr.</b> Die ersten Versuche mit dem neuen Linux Triber
+				<b><i>25.05.03</i></b> - <b>ATI Unterstützung, ISDN + mehr.</b> Die ersten Versuche mit dem neuen Linux Treiber
 				von ATI sind sehr vielversprechend; In Kürze wird auch ISDN funktionieren; In der kommenden
-				Version 0.2 ist das aktuelle KDE 3.2.1 enthalten; Ein neues Logo sowie eine sehenswerte Flash-Animation
+				Version 0.2 ist das aktuelle KDE 3.1.2 enthalten; Ein neues Logo sowie eine sehenswerte Flash-Animation
 				wird ebenfalls entwickelt. Ihr dürft gespannt sein ;-)<br><br> 
 				<b><i>06.05.03</i></b> - Zwei Mailinglisten sind eingerichtet worden: <b>jollix-user</b>
 				ist &ouml;ffentlich und dient dem Austausch der jollix-user untereinander. 
