*** empty log message ***

--- a/jollix/public_html/de/de_about.html
+++ b/jollix/public_html/de/de_about.html
@@ -1,4 +1,4 @@
-<!DOCTYPE public "-//w3c//dtd html 4.01 transitional//en" 
+<!DOCTYPE public "-//w3c//dtd html 4.01 transitional//en"
 		"http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
@@ -46,47 +46,40 @@
 					<a name="about"></a>
 					<h4>Was ist jollix?</h4>
 					Jollix ist derzeit eine LiveCD die auf <a href="dokumentation.html#gentoo">Gentoo Linux</a>
-					basiert. D.h. man bootet	
+					basiert. D.h. man bootet
 					von CD und benutzt das System wie <a href="http://www.knopper.net/knoppix/" target="_blank">Knoppix</a>
 					nur von CD aus ohne die Festplatte beschreiben zu könnnen.
-					Als einfach zu installierende und komplett freie Linux Distribution
-					für die x86 Architektur, wird es jollix in einer späteren Version einmal geben.
-					Danach hat man de facto Gentoo Linux auf der Platte. und kann dieses System
-					auch beliebig erweitern, updaten, usw.<br>
-					Mit jollix soll hauptsächlich dem Gamer und Multimedia-Enthusiast
-					der vollständige Umstieg von MS-Windows auf Linux
-					erleichtert werden. Zum Ausprobieren kann man jollix -
-					ganz wie <a href="http://www.knopper.net/knoppix/" target="_blank">Knoppix</a> -
-					direkt von einer CD booten, ohne die Festplatte mit bereits bestehenden 
-					Partitionen anzurühren. Dazu <a href="http://developer.berlios.de/project/showfiles.php?group_id=666&release_id=865" target=parent>
-					lädt man sich das ISO Image einfach herunter</a>, 
-					brennt es auf eine CD und bootet damit den PC neu. Soll das bestehende
-					System ersetzt werden, kann dieselbe CD (irgendwann einmal ;-) 
-					zum Installieren eines vollwertigen
-					und hochoptimierten Linux Systems verwendet werden.<br><br>
-					Die Installation geschieht fast vollautomatisch, da sie bestimmte
-					Hardwarekomponenten (Athlon CPU, nVidia oder ATi Grafiksystem, 
-					die gängigsten Soundkarten usw.) vorraussetzt. Für diese Umgebung
-					ist jollix dann aber optimal konfiguriert und quasi "out-of-the-box"
-					benutzbar!<br><br>
-					Neben der Desktop-Umgebung <a href="de_docu.html#kde">KDE</a> 
-					samt einiger nützlicher Programme (Multimedia-Anwendungen,
-					CD-Brennprogramm usw.) ist auch <a href="de_docu.html#wine">wine</a> enthalten.
-					Wine ist ein Programmpaket, mit dem auch MS-Windows Programme unter Linux laufen.
-					Dadurch sind insbesondere auch Spiele wie Counter-Strike unter Linux benutzbar,
-					für die es (noch) keine Linux-Version gibt.<br><br>
-					Sollte der Funktionsumfang irdendwann nicht mehr ausreichend sein,
+					Eine Version zur dauerhaften Installation auf Festplatte wird es irgendwann
+					später auch einmal geben.
+					Danach hat man de facto Gentoo Linux auf der Platte, das man
+					über das Ports-System von Gentoo dann beliebig erweitern und updaten kann.<br>
+					Mit Jollix soll hauptsächlich der Gamer und Multimedia-Enthusiast
+					angesprochen werden, der die Linux Plattform bevorzugen will.
+					Zum Ausprobieren kann man jollix mit einer automatischen Hardware-Erkennung
+					direkt von einer CD booten, ohne die Festplatte mit bereits bestehenden
+					Partitionen zu verändern. Dazu <a href="http://developer.berlios.de/project/showfiles.php?group_id=666&release_id=865" target=parent>
+					lädt man sich einfach das ISO Image herunter</a>,
+					brennt es auf eine CD und bootet damit den PC neu.
+					<br><br>
+					Neben der Desktop-Umgebung <a href="de_docu.html#kde">KDE</a>
+					samt einiger nützlicher Programme (v.a. Internet- und Multimedia-Anwendungen)
+					ist auch <a href="de_docu.html#wine">Wine</a> enthalten.
+					Wine ist ein Programmpaket, mit dem auch einige MS-Windows Programme
+					unter Linux laufen.	Dadurch sind insbesondere Spiele wie
+					Counter-Strike unter Linux lauffähig,
+					für die es (noch) keine eigene Linux-Version gibt
+					(und vielleicht auch nie geben wird).<br><br>
+					Sollte nach einer Festplatteninstallation der Funktionsumfang
+					irgendwann nicht mehr ausreichen,
 					kann das System einfach erweitert werden. D.h. zuätzliche Programmpakete
 					können - ganz wie bei Gentoo Linux - installiert und auch wieder deinstalliert
-					werden. Dafür wird das von den gentoo-Machern entwickelte 
-					<a href="http://www.gentoo.org/doc/de/portage-user.xml">Portage</a> System
-					gleich mit installiert. Jollix vereint so alle Vorteile der 
-					High-End-Geek-Linux Distribution
-					Gentoo mit den Bedürfnissen und Ansprüchen eines MS-Windows Nutzers, 
-					den bisher nur das Zocken seines Lieblings-Shooters vom Umstieg auf Linux 
-					abgehalten hat.
+					werden. Dafür wird das von den Gentoo-Machern entwickelte System namens
+					<a href="http://www.gentoo.org/doc/de/portage-user.xml">Portage</a>
+					gleich mit installiert. Eine <i>richtige</i> Installtion ist derzeit
+					noch nicht möglich, jedoch ab einer der kommenden Versionen (spätestens 1.0 ;-)
+
 					<h4>Was ist jollix nicht?</h4>
-					Jollix hat nichts mit 
+					Jollix hat nichts mit
 					<a href="http://jargon.watson-net.com/jargon.asp?prn=1&w=jolix">jolix</a>,
 					dem Freeware Port des BSD Net/2 Systems auf die Intel i386 Architektur von
 					Bill und Lynne Greer Jolitz zu tun. ;-)
