--- a/jollix/public_html/de/de_home.html
+++ b/jollix/public_html/de/de_home.html
@@ -43,12 +43,36 @@
 			</center>
 			</td>
 			<td valign="top">
+				Jollix ist eine freie GNU/Linux Distribution, die einfach von CD läuft (LiveCD).
+				Jollix ist ein speziell für Spiele und Multimedia vorkonfiguriertes
+				<a href="http://www.gentoo.org" target="_blank">Gentoo Linux</a>,
+				das automatisch gängige PC-Hardware erkennen und konfigurieren kann. Die LiveCD
+				startet automatisch eine grafische Oberfläche (Xfree und KDE), so dass direkt
+				alle wichtigen Anwendungen konfiguriert oder gleich benutzt
+				werden können. Mehr Informationen gibt es <a href="de_about.html">hier.</a><br>
+				<hr>
 				<font size="+1"><b>News & Ankündigungen:<b></font><br><br>
+				<b><i>06.08.03</i></b> - <b><a href="http://www.gentoo.org" target="_blank">Gentoo 1.4
+				erschienen.</a></b> Seit heute ist Gentoo Linux 1.4 als LiveCD zum
+				<a href="http://www.gentoo.org/main/en/mirrors.xml" target="blank">Download freigegeben</a>.
+				Die Arbeit an Jollix 0.2 geht deshalb langsam in die Betatest-Phase über.<br>
+				Die <a href="http://graphics.cs.uni-sb.de/NMM/index.html target="blank">
+				NETWORK-INTEGRATED MULTIMEDIA MIDDLEWARE</a> für Linux (NMM) ist ein Projekt
+				an der <a href="http://graphics.cs.uni-sb.de" target="blank">Universität des Saarlandes</a>,
+				das eine Infrastruktur zwischen vernetzten Multimedia-Geräten (PCs, Kameras, Handhelds
+				usw.) etabliert. Enthalten im <a href="http://sourceforge.net/projects/nmm/">CVS Archiv</a>
+				ist u.a. die <a href="http://graphics.cs.uni-sb.de/NMM/Status/MMBox/index.html">
+				Multimedia-Box</a>, eine NMM-Anwendung, die ein erweiterbares Home Entertainment
+				System bereit stellt (ähnlich wie <a href="http://freevo.sourceforge.net/">freevo</a> z.B.).
+				In der Zusammenarbeit mit dem NMM-Team ist geplant, für die Multimedia-Box eine eigene
+				Jollix Version zu schaffen, so dass dann die Mutimedia-Box direkt von der bootfähigen
+				CD-ROM gestartet werden kann.
+				<br><br>
 				<b><i>25.05.03</i></b> - <b>ATI Unterstützung, ISDN + mehr.</b> Die ersten Versuche mit dem neuen Linux Treiber
 				von ATI sind sehr vielversprechend; In Kürze wird auch ISDN funktionieren; In der kommenden
 				Version 0.2 ist das aktuelle KDE 3.1.2 enthalten; Ein neues Logo sowie eine sehenswerte Flash-Animation
-				wird ebenfalls entwickelt. Ihr dürft gespannt sein ;-)<br><br> 
-				<b><i>06.05.03</i></b> - <b>Betatester gesucht!</b> Wenn du Interesse hast, die 
+				wird ebenfalls entwickelt. Ihr dürft gespannt sein ;-)<br><br>
+				<b><i>06.05.03</i></b> - <b>Betatester gesucht!</b> Wenn du Interesse hast, die
 				jeweils aktuelle Beta-Release auf Herz und Nieren zu testen, 
 				<a href="http://jollix.berlios.de/phpBB2/viewtopic.php?t=29">nimm &uuml;ber das Forum 
 				Kontakt zu ViVa auf</a> und melde dich dort auch gleich an.<br><br>
@@ -57,15 +81,11 @@
 				Um die jollix-user Liste zu abonnieren,
 				<a href="https://lists.berlios.de/mailman/listinfo/jollix-user">hier klicken</a>.<br>
 				<b>jollix-developer</b> ist die private Gruppe der jollix Entwickler, 
-				in der die Weiterentwicklung von jollix diskutiert wird. 
-				Um die <a href="https://lists.berlios.de/mailman/listinfo/jollix-developer">jollix-developer</a> 
+				in der die Weiterentwicklung von jollix diskutiert wird.
+				Um die <a href="https://lists.berlios.de/mailman/listinfo/jollix-developer">jollix-developer</a>
 				Liste zu abonnieren, sollte man am besten einen Account bei
 				<a href="http://developer.berlios.de/account/register.php" target="_blank">berliOS</a>
 				haben und dem jollix-Projekt <a href="http://developer.berlios.de/project/memberlist.php?group_id=666">beitreten</a>.<br><br>
-				<b><i>01.05.03</i></b> - Wegen der Zusammenarbeit mit den Machern von <a href="http://www.public-enemy.de" target="_blank">Public Enemy</a>
-				ist eine neue Release von jollix <a href="http://developer.berlios.de/project/showfiles.php?group_id=666&release_id=865" target="parent">online</a>. <b>Jollix 0.1.1</b> erlaubt nun, neben Counter-Strike auch
-				eine Festplatten Installation von <a href=" http://www.public-enemy.de" target="_blank">Public Enemy: The Dark Future</a> (80000 Downloads am ersten Tag!)
-				unter jollix einzurichten und zu spielen. Ausserdem gibt es einige Bugfixes.<br><br>				
 			</td>
 		</tr>
   </tbody>
