*** empty log message ***

--- a/jollix/public_html/de/de_about.html
+++ b/jollix/public_html/de/de_about.html
@@ -30,7 +30,7 @@
 				<a href="de_screenshots.html"><img src="../img/screenshots.jpg" border=0></a><br>
 				<a href="de_download.html"><img src="../img/download.jpg" border=0></a><br>
 				<a href="de_features.html"><img src="../img/features.jpg" border=0></a><br>
-				<a href="../phpBB2/index.php"><img src="../img/forum.jpg" border=0></a><br>
+				<a href="http://jollix.berlios.de/phpBB2/index.php"><img src="../img/forum.jpg" border=0></a><br>
 				<a href="de_about.html"><img src="../img/about.jpg" border=0></a><br>
 				<a href="de_news.html"><img src="../img/news.jpg" border=0><br></a><br>
 				<a href="http://www.gentoo.org" target="_blank"><img src="../img/powered-by-gentoo.jpg"></a>
