--- a/jollix/public_html/de/de_home.html
+++ b/jollix/public_html/de/de_home.html
@@ -30,7 +30,7 @@
 				<a href="de_screenshots.html"><img src="../img/screenshots.jpg" border=0></a><br>
 				<a href="de_download.html"><img src="../img/download.jpg" border=0></a><br>
 				<a href="de_features.html"><img src="../img/features.jpg" border=0></a><br>
-				<a href="../phpBB2/index.php"><img src="../img/forum.jpg" border=0></a><br>
+				<a href="http://jollix.berlios.de/phpBB2/index.php"><img src="../img/forum.jpg" border=0></a><br>
 				<a href="de_about.html"><img src="../img/about.jpg" border=0></a><br>
 				<a href="de_news.html"><img src="../img/news.jpg" border=0><br></a><br>
 				<a href="http://www.gentoo.org" target="_blank"><img src="../img/powered-by-gentoo.jpg"></a>
@@ -52,6 +52,21 @@
 				werden können. Mehr Informationen gibt es <a href="de_about.html">hier.</a><br>
 				<hr>
 				<font size="+1"><b>News & Ankündigungen:<b></font><br><br>
+				<b><i>05.09.03</i></b> - <b>Jollix 0.2-beta steht in Kürze zum Download bereit.</b><br>
+				Die Version 0.2-beta von jollix ist fertig und wird - wenn alles klappt - im Laufe des Tages für die
+				registrierten Beta-Tester bei Berlios zum Download bereit stehen. Nach einer anvisierten
+				2-wöchigen Testphase soll dann die allgemeine Veröffentlichung von jollix 0.2 folgen.<br>
+				Die wichtigsten Neuerungen sind:
+				<ul>
+					<li>ATI Grafikkarten 3D-Support (hackattack!!)</li>
+					<li>AVM FritzCardDSL</li>
+					<li>ISDN (capi4linux)</li>
+					<li>Digital Kamera Hotplug</li>
+					<li>XQF Gamebrowser</li>
+					<li>TV Karten Unterstützung</li>
+				</ul>
+				Weitere Einzelheiten sowie bekannte Fehler, workarounds + hacks werden im Forum und hier
+				in den nächsten Tagen bekannt gegeben. Happy Testing ;-)<br><br>
 				<b><i>06.08.03</i></b> - <b><a href="http://www.gentoo.org" target="_blank">Gentoo 1.4
 				erschienen.</a></b> Seit heute ist Gentoo Linux 1.4 als LiveCD zum
 				<a href="http://www.gentoo.org/main/en/mirrors.xml" target="blank">Download freigegeben</a>.
@@ -76,16 +91,6 @@
 				jeweils aktuelle Beta-Release auf Herz und Nieren zu testen, 
 				<a href="http://jollix.berlios.de/phpBB2/viewtopic.php?t=29">nimm &uuml;ber das Forum 
 				Kontakt zu ViVa auf</a> und melde dich dort auch gleich an.<br><br>
-				<b><i>06.05.03</i></b> - Zwei Mailinglisten sind eingerichtet worden: <b>jollix-user</b>
-				ist &ouml;ffentlich und dient dem Austausch der jollix-user untereinander. 
-				Um die jollix-user Liste zu abonnieren,
-				<a href="https://lists.berlios.de/mailman/listinfo/jollix-user">hier klicken</a>.<br>
-				<b>jollix-developer</b> ist die private Gruppe der jollix Entwickler, 
-				in der die Weiterentwicklung von jollix diskutiert wird.
-				Um die <a href="https://lists.berlios.de/mailman/listinfo/jollix-developer">jollix-developer</a>
-				Liste zu abonnieren, sollte man am besten einen Account bei
-				<a href="http://developer.berlios.de/account/register.php" target="_blank">berliOS</a>
-				haben und dem jollix-Projekt <a href="http://developer.berlios.de/project/memberlist.php?group_id=666">beitreten</a>.<br><br>
 			</td>
 		</tr>
   </tbody>
