--- a/jollix/public_html/de/de_news.html
+++ b/jollix/public_html/de/de_news.html
@@ -30,7 +30,7 @@
 				<a href="de_screenshots.html"><img src="../img/screenshots.jpg" border=0></a><br>
 				<a href="de_download.html"><img src="../img/download.jpg" border=0></a><br>
 				<a href="de_features.html"><img src="../img/features.jpg" border=0></a><br>
-				<a href="../phpBB2/index.php"><img src="../img/forum.jpg" border=0></a><br>
+				<a href="http://jollix.berlios.de/phpBB2/index.php"><img src="../img/forum.jpg" border=0></a><br>
 				<a href="de_about.html"><img src="../img/about.jpg" border=0></a><br>
 				<a href="de_news.html"><img src="../img/news.jpg" border=0><br></a><br>
 				<a href="http://www.gentoo.org" target="_blank"><img src="../img/powered-by-gentoo.jpg"></a>
@@ -43,6 +43,37 @@
 			</center>
 			</td>
 			<td valign="top"><font size="+1"><b>News:<b></font><br><br>
+				<b><i>05.09.03</i></b> - <b>Jollix 0.2-beta steht in Kürze zum Download bereit.</b><br>
+				Die Version 0.2-beta von jollix ist fertig und wird - wenn alles klappt - im Laufe des Tages für die
+				registrierten Beta-Tester bei Berlios zum Download bereit stehen. Nach einer anvisierten
+				2-wöchigen Testphase soll dann die allgemeine Veröffentlichung von jollix 0.2 folgen.<br>
+				Die wichtigsten Neuerungen sind:
+				<ul>
+					<li>ATI Grafikkarten 3D-Support (hackattack!!)</li>
+					<li>AVM FritzCardDSL</li>
+					<li>ISDN (capi4linux)</li>
+					<li>Digital Kamera Hotplug</li>
+					<li>XQF Gamebrowser</li>
+					<li>TV Karten Unterstützung</li>
+				</ul>
+				Weitere Einzelheiten sowie bekannte Fehler, workarounds + hacks werden im Forum und hier
+				in den nächsten Tagen bekannt gegeben. Happy Testing ;-)<br><br>
+				<b><i>06.08.03</i></b> - <b><a href="http://www.gentoo.org" target="_blank">Gentoo 1.4
+				erschienen.</a></b> Seit heute ist Gentoo Linux 1.4 als LiveCD zum
+				<a href="http://www.gentoo.org/main/en/mirrors.xml" target="blank">Download freigegeben</a>.
+				Die Arbeit an Jollix 0.2 geht deshalb langsam in die Betatest-Phase über.<br>
+				Die <a href="http://graphics.cs.uni-sb.de/NMM/index.html target="blank">
+				NETWORK-INTEGRATED MULTIMEDIA MIDDLEWARE</a> für Linux (NMM) ist ein Projekt
+				an der <a href="http://graphics.cs.uni-sb.de" target="blank">Universität des Saarlandes</a>,
+				das eine Infrastruktur zwischen vernetzten Multimedia-Geräten (PCs, Kameras, Handhelds
+				usw.) etabliert. Enthalten im <a href="http://sourceforge.net/projects/nmm/">CVS Archiv</a>
+				ist u.a. die <a href="http://graphics.cs.uni-sb.de/NMM/Status/MMBox/index.html">
+				Multimedia-Box</a>, eine NMM-Anwendung, die ein erweiterbares Home Entertainment
+				System bereit stellt (ähnlich wie <a href="http://freevo.sourceforge.net/">freevo</a> z.B.).
+				In der Zusammenarbeit mit dem NMM-Team ist geplant, für die Multimedia-Box eine eigene
+				Jollix Version zu schaffen, so dass dann die Mutimedia-Box direkt von der bootfähigen
+				CD-ROM gestartet werden kann.
+				<br><br>
 				<b><i>25.05.03</i></b> - <b>ATI Unterstützung, ISDN + mehr.</b> Die ersten Versuche mit dem neuen Linux Treiber
 				von ATI sind sehr vielversprechend; In Kürze wird auch ISDN funktionieren; In der kommenden
 				Version 0.2 ist das aktuelle KDE 3.1.2 enthalten; Ein neues Logo sowie eine sehenswerte Flash-Animation
