added packet list

--- a/jollix/public_html/de/de_features.html
+++ b/jollix/public_html/de/de_features.html
@@ -62,7 +62,8 @@
 					<li>Spiel Deine Half-Life-, Public-Enemy- oder Counter-Strike Festplatteninstallation! </li>
 					<li>Teamspeak Client für Linux</li>
 					<li>Bugfixes + aktuelle Versionen der installierten Software</li>
-					<li>Installationsanleitung für erfahrene Linux User</li>
+					<li>Installationsanleitung für erfahrene Linux User</li><br>
+					<li><a href="../common/packets.html" target="_blank">Paketliste (in neuem Fenster)</a></li>
 				</ul>
 				<h4>Known Bugs / Bekannte Fehler in 0.1.1</h4>
 				<ul>
