*** empty log message ***

--- a/jollix/public_html/common/packets.html
+++ b/jollix/public_html/common/packets.html
@@ -39,7 +39,7 @@
 <p class="chaphead"><span class="chapnum">1.</span><a name="features">Features</a></p>
 <table class="ntable" width="60%" cellspacing="0" cellpadding="5" border="1">
 <tr><td width="30%" class="infohead" bgcolor="#eec625"><p>Features 0.2</p></td><td bgcolor="#eec625"></td></tr>
-<tr><td bgcolor="#ffffff">Release</td><td bgcolor="#ffffff">Datum</td></tr>
+<tr><td bgcolor="#ffffff">Release</td><td bgcolor="#ffffff">22.10.2003</td></tr>
 <tr><td bgcolor="#ffffff">Price/Licence</td><td bgcolor="#ffffff">free/<a href="http://www.gnu.org/copyleft/copyleft.html#translations" target="_blank">GPL</a></td></tr>
 <tr><td bgcolor="#ffffff">CD</td><td bgcolor="#ffffff">1</td></tr>
 <tr><td bgcolor="#ffffff">Installation</td><td bgcolor="#ffffff">tutorial</td></tr>
