--- a/jollix/public_html/de/de_docu.html
+++ b/jollix/public_html/de/de_docu.html
@@ -46,9 +46,9 @@
 			<a href="#readme01">Readme.txt der Version 0.2</a><br>
 			<a href="#faq">FAQ</a><br>
 			<a href="#ausprobieren">Jollix ausprobieren <b>ohne</b> Installation</a><br>
-			<a href="#installation">Vollständige Installation</a><br>
+			<a href="#installation">Jollix installieren</a><br>
 			<hr>
-			<a name="readme01">Readme.txt der Version 0.2</a>
+			<a name="readme01">Readme.txt der Version 0.2:</a>
 			<pre>
 jollix 0.2 ---- Erste Schritte ---- http://www.jollix.de ---- 0.2 Release
 
@@ -58,7 +58,7 @@ jollix 0.2 ---- Erste Schritte ---- http://www.jollix.de ---- 0.2 Release
 2. ADSL einrichten
 3. AVM FritzCard DSL einrichten
 4. Half-Life und HL Modifikationen einrichten
-5. ATI Radeon Karten Unterstütztung
+5. ATI Radeon Karten Unterstützung
 6. Passwörter
 7. Installation von jollix 0.2
 
@@ -67,7 +67,7 @@ jollix 0.2 ---- Erste Schritte ---- http://www.jollix.de ---- 0.2 Release
 Jollix ist eine freie GNU/Linux Distribution, die direkt von CD läuft (LiveCD).
 Jollix ist ein speziell für Spiele und Multimedia vorkonfiguriertes Gentoo Linux,
 das automatisch gängige PC-Hardware erkennen und konfigurieren kann. Die LiveCD
-startet automatisch eine grafische Oberfläche (XFree mit KDE), so dass direkt alle
+startet automatisch eine grafische Oberfläche (XFree mit KDE), so dass alle
 wichtigen Anwendungen direkt benutzt werden können. Die Version 0.2 ist die zweite
 Beta-Release von jollix. Die wichtigsten Erweiterungen gegenüber der Version 0.1.1
 sind die Unterstützung von ATI Radeon Grafikkarten, ISDN-Karten und der FritzCard
@@ -142,10 +142,10 @@ Das voreingestellte root-Passwort lautet: jollix
 
 Das voreingestellte user-Passwort lautet: user
 
-7. Installations von jollix 0.2
+7. Installation von jollix 0.2
 Die jollix Version 0.2 dient auch zum Testen einer Installation von jollix auf der Festplatte.
 Die ausführliche Anleitung gibt es hier:
-http://jollix.berlios.de/de/de_jollix-installation.html
+http://www.jollix.de/de/de_docu.html#installation
 Die Installation dient nur zu Testzwecken und kann nur von erfahrenen
 Linuxanwendern durchgeführt werden! Ein grafischer Installer wird es erst in
 einer der späteren jollix Versionen geben!
@@ -173,7 +173,7 @@ IRC: irc://irc.quakenet.org/jollix
 				Portage ist ein Ports-System in der Tradition von <a href="http://www.openbsd.org/de/ports.html" target="_blank">BSD-Ports</a>.
 				Es ist in Python realisiert und bringt einige zusätzliche Features mit,
 				darunter auch ein fein granuliertes Management von Abhängigkeiten,
-				die Möglichkeit, "fake"-Installationen als OpenBSD durchzuführen,
+				die Möglichkeit, "fake"-Installationen durchzuführen,
 				ein Pfad-Sandboxing, sicheres "Unmerging", System-Profile,
 				virtuelle Pakete und ein Konfigurationsdatei-Management.<br>
 				Gentoo Linux bildet die Basis von jollix und ist auf <a href="http://www.gentoo.org" target="_blank">www.gentoo.org</a>
@@ -182,14 +182,6 @@ IRC: irc://irc.quakenet.org/jollix
 				Ja. Jollix kann "nur-lesend" direkt von CD-ROM gestartet werden.
 				Dabei wird das bestehende System nicht verändert. Unter Windows installierte
 				Programme können teilweise sogar gestartet werden, z.B. Counter-Strike.
-				<h4>Was passiert, wenn ich jollix installiere?</h4>
-				Die Partitionstabelle der ersten Festplatte wird neu geschrieben, um nach
-				einer Formatierung der <b>gesamten</b> Platte, jollix dort zu installieren
-				D.h. alles was sich auf der Festplatte befindet, Betriebsystem, Anwwendungsprogramme,
-				persönliche Daten usw, wird unwiederbringlich gelöscht. Jollix ist in dieser Hinsicht
-				kompromisslos. Es werden keine Partitionen vergrössert oder verkleinert wie
-				bei anderen Distributionen. Eine eventuell vorhandene zweite Festplatte wird
-				nicht angetastet.
 				<a name="wine"></a><h4>Was ist wine?</h4>
 				<a href="http://www.winehq.com/" target="_blank">Wine</a> ist eine Implementierung
 				der Windows Win32 und Win16 APIs auf Basis des Fenstermanagers X und Unix. Wine
@@ -205,7 +197,7 @@ IRC: irc://irc.quakenet.org/jollix
 				der jollix-wine-liste stehen, garantiert laufen.
 				Eine deutschsprachige Seite über wine ist
 				<a href="http://www.linux-wine.de/" target="_blank">www.linux-wine.de</a>, die Original Seiten
-				sind auf <a href="http://www.winehq.com/" target="_blank">www.winehq.com</a> zu finden.<br><br>
+				sind auf <a href="http://www.winehq.com/" target="_blank">www.winehq.com</a> zu finden.<br>
 				<a name="kde"></a><h4>Was ist KDE?</h4>
 				KDE ist eine moderne grafische Arbeitsumgebung für UNIX Workstations.
 				KDE strebt an, den Bedarf für eine einfach zu bedienende Arbeitsfläche
