--- a/jollix/public_html/de/de_download.html
+++ b/jollix/public_html/de/de_download.html
@@ -43,7 +43,7 @@
 	<table>
 		<tr>
 			<td valign="top">
-				<b>Aktuelle Version <a href="http://developer.berlios.de/project/showfiles.php?group_id=666&release_id=865" target="parent">jollix 0.2</a> [xx.10.2003]</b><br><br>
+				<b>Aktuelle Version <a href="http://developer.berlios.de/project/showfiles.php?group_id=666&release_id=865" target="parent">jollix 0.2</a> [22.10.2003]</b><br><br>
 				<b>Download Mirrors:</b><br>
 				<ul>
 					<li>Germany:<br>
@@ -69,7 +69,7 @@
 				<ul>
 					<li>jollix 0.1.1 [30.04.2003]<br>
 						Zweite verbesserte Release, CS/PE - Edition<br>
-						Downloads der [0.1.] bis xx.10.2003: xxxx </li>
+						Downloads der [0.1.1] bis 22.10.2003: 7874 </li>
 					<li>jollix 0.1 [17.04.2003]<br>
 						Erste Release, CS - Edition<br>
 						Downloads der [0.1] bis 30.04.2003: 429 </li>
