--- a/jollix/public_html/de/de_features.html
+++ b/jollix/public_html/de/de_features.html
@@ -46,26 +46,23 @@
 				<h4>Jollix 0.2 Features:</h4>
 				<ul>
 					<li>basiert auf <a href="http://www.gentoo.org" target="_blank">Gentoo Linux</a></li>
-  				<li>zum Ausprobieren: keinerlei Installation auf Festplatte notwendig</li>
-					<li>für Athlon-CPUs optimiert (Pentium-Optimierung ist erstmal auf später verschoben,
-						funktioniert aber auch mit Pentium II Rechnern aufwärts, i686)	</li>
-  				<li>unterstützt nVidia und ATI-basierte (volle 3D Beschleunigung) und alle anderen
-						(nur Vesa!) Grafikkarten</li>
-					<li>Kernel: Gentoo 2.4.22-gaming-sources</li>
+  				<li>zum Ausprobieren ist keine Installation auf der Festplatte notwendig</li>
+					<li>Optimiert für i686 Architektur</li>
+  				<li>unterstützt nVidia und ATI-basierte Grafikkarten mit voller 3D Beschleunigung, alle anderen Grafikkarten mit Vesa Modus</li>
+					<li>Kernel: Gentoo 2.4.20-gaming-sources</li>
   				<li>KDE 3.1.4</li>
-					<li>Multimedia Anwendungen (xmms, mplayer, xine u.a.)</li>
+					<li>Viele Multimedia Anwendungen (xmms, mplayer, xine u.a.)</li>
 					<li>ISDN-Unterstützung</li>
 					<li>Fritz!Card DSL</li>
-					<li>Wine Build ?????</li>
+					<li>Wine Build 20030911</li>
 					<li><a href="http://www.linuxgames.com/xqf/" target="_blank">XQF</a>, ein Game-Server Browser</li>
-					<li>Cheathing Death und HLSW Unterstützung </li>
-					<li>Spiel Deine Half-Life-, Public-Enemy- oder Counter-Strike Festplatteninstallation! </li>
-					<li>Teamspeak Client für Linux</li>
-					<li>Bugfixes + aktuelle Versionen der installierten Software</li>
+					<li>Cheathing Death Unterstützung </li>
+					<li>Half-Life-, Public-Enemy- oder Counter-Strike Festplatteninstallation können direkt mit der LiveCD gespielt werden! </li>
+					<li>Viele Bugfixes + aktuelle Versionen der installierten Software</li>
 					<li>Installationsanleitung für erfahrene Linux User</li><br>
 					<li><a href="../common/packets.html" target="_blank">Paketliste (in neuem Fenster)</a></li>
 				</ul>
-				<h4>Known Bugs / Bekannte Fehler in 0.1.1</h4>
+				<h4>Known Bugs / Bekannte Fehler der 0.2:</h4>
 				<ul>
 					<li>???</li>
 				</ul>
@@ -76,13 +73,12 @@
 						startet: Verwandelt den PC in ein Netzwerk-taugliches Multimedia Home-Entertainment Center!</li>
 					<li>...</li>
 				</ul>
-				<h4>Was jolix irgendwann mal k&ouml;nnen soll:</h4>
+				<h4>Was jollix irgendwann mal k&ouml;nnen soll:</h4>
 				<ul>
-					<li>auf Wunsch schnell und einfach installiert</li>
-					<li>beliebig erweiterbar, wie bie Gentoo (jollix _IST_ dann Gentoo ;-)</li>
-				</ul>
+					<li>schnelle und einfache grafische Installation</li>
+					</ul>
 				<h4>Was soll jollix können?</h4>
-				Im <a href="phpBB2/index.php">Forum</a> könnt ihr Vorschläge machen, was jollix in zukünftigen
+				Im <a href="http://jollix.berlios.de/phpBB2/index.php">Forum</a> könnt ihr Vorschläge machen, was jollix in zukünftigen
 				Versionen alles mitbringen soll. Z.B. ein bestimmtes Programm, Unterstützung für ein
 				bestimmtes Spiel, Half-Life Mod usw.
 			</td>
