--- a/jollix/public_html/de/de_home.html
+++ b/jollix/public_html/de/de_home.html
@@ -53,8 +53,7 @@
 		<tr>
 			<td valign="top">
 				<font size="+1"><b>News & Ankündigungen:<b></font><br><br>
-				<b><i>19.10.03</i></b> - <b>Jollix 0.2 ist fertig</b> und kann hier heruntergrladen werden:<br>
-				blahblah
+				<b><i>22.10.03</i></b> - <b>Jollix 0.2 ist fertig</b> und kann hier heruntergrladen werden:<br>
 				<br><br>
 				<b><i>05.09.03</i></b> - <b>Jollix 0.2-beta steht in Kürze zum Download bereit.</b><br>
 				Die Version 0.2-beta von jollix ist fertig und wird - wenn alles klappt - im Laufe des Tages für die
@@ -62,7 +61,7 @@
 				2-wöchigen Testphase soll dann die allgemeine Veröffentlichung von jollix 0.2 folgen.<br>
 				Die wichtigsten Neuerungen sind:
 				<ul>
-					<li>ATI Grafikkarten 3D-Support (hackattack!!)</li>
+					<li>ATI Grafikkarten 3D-Support</li>
 					<li>AVM FritzCardDSL</li>
 					<li>ISDN (capi4linux)</li>
 					<li>Digital Kamera Hotplug</li>
