--- a/jollix/public_html/de/de_about.html
+++ b/jollix/public_html/de/de_about.html
@@ -41,38 +41,27 @@
 	</table>
 	<hr>
 	<h4>Was ist jollix?</h4>
-	Jollix ist derzeit eine LiveCD die auf <a href="dokumentation.html#gentoo">Gentoo Linux</a>
-	basiert. D.h. man bootet von CD und benutzt das System wie
-	<a href="http://www.knopper.net/knoppix/" target="_blank">Knoppix</a>
-	nur von CD aus ohne die Festplatte beschreiben zu könnnen.
-	Eine Version zur dauerhaften Installation auf Festplatte wird es irgendwann
-	später auch einmal geben. Danach hat man de facto Gentoo Linux auf der Platte, das man
-	über das Ports-System von Gentoo dann beliebig erweitern und updaten kann.<br>
+	Jollix ist eine LiveCD, die auf <a href="dokumentation.html#gentoo">Gentoo Linux</a>
+	basiert. jollix bootet direkt von CD, ohne die Festplatte zu verändern.
+	Die Möglichkeit, jollix einfach und schnell auf der Festplatte zu installieren, wird es in einer der späteren Versionen geben. Eine Festplatteninstallation von jollix kann über die Portage Paketverwaltung von Gentoo dann beliebig erweitert und upgedatet werden.<br>
 	Mit Jollix soll hauptsächlich der Gamer und Multimedia-Enthusiast
-	angesprochen werden, der die Linux Plattform bevorzugen will.
-	Zum Ausprobieren kann man jollix mit einer automatischen Hardware-Erkennung
-	direkt von einer CD booten, ohne die Festplatte mit bereits bestehenden
-	Partitionen zu verändern. Dazu
-	<a href="http://developer.berlios.de/project/showfiles.php?group_id=666&release_id=865" target=parent>
-	lädt man sich einfach das ISO Image herunter</a>,
-	brennt es auf eine CD und bootet damit den PC neu.
+	angesprochen werden, der Linux als stabile und sichere Plattform bevorzugt.<br>
+	Also <a href="http://developer.berlios.de/project/showfiles.php?group_id=666&release_id=865" target=parent>iso Image</a> herunterladen, auf eine CD brennen und den PC damit booten!
 	<br><br>
 	Neben der Desktop-Umgebung <a href="de_docu.html#kde">KDE</a>
-	samt einiger nützlicher Programme (v.a. Internet- und Multimedia-Anwendungen)
+	inkl. vieler nützlicher Programme (v.a. Internet- und Multimedia-Anwendungen)
 	ist auch <a href="de_docu.html#wine">Wine</a> enthalten.
 	Wine ist ein Programmpaket, mit dem auch einige MS-Windows Programme
-	unter Linux laufen.	Dadurch sind insbesondere Spiele wie
+	unter Linux laufen. Dadurch sind insbesondere Spiele wie
 	Counter-Strike unter Linux lauffähig,
 	für die es (noch) keine eigene Linux-Version gibt
-	(und vielleicht auch nie geben wird).<br><br>
-	Sollte nach einer Festplatteninstallation der Funktionsumfang
-	irgendwann nicht mehr ausreichen,
-	kann das System einfach erweitert werden. D.h. zuätzliche Programmpakete
-	können - ganz wie bei Gentoo Linux - installiert und auch wieder deinstalliert
-	werden. Dafür wird das von den Gentoo-Machern entwickelte System namens
-	<a href="http://www.gentoo.org/doc/de/portage-user.xml">Portage</a>
-	gleich mit installiert. Eine <i>richtige</i> Installtion ist derzeit
-	noch nicht möglich, jedoch ab einer der kommenden Versionen (spätestens 1.0 ;-)
+	(und vielleicht auch nie geben wird).<br>
+	Sollte nach einer Festplatteninstallation der Funktionsumfang nicht mehr ausreichen,
+	kann das System einfach erweitert werden. D.h. zusätzliche Programmpakete
+	können - wie mit Gentoo Linux - installiert und auch wieder deinstalliert
+	werden. Dafür wird die von den Gentoo entwickelte Paketverwaltung <a href="http://www.gentoo.org/doc/de/portage-user.xml">Portage</a>
+	gleich mit installiert. Eine einfache grafische und benutzergeführte Installtion ist derzeit
+	noch nicht möglich. Erfahrenere Leute können jedoch jetzt schon jollix auf der Festplatte installieren, dazu gibt es in der Dokumentation eine <a href="de_docu.html#installation">Anleitung</a>.
 
 	<h4>Was ist jollix nicht?</h4>
 	Jollix hat nichts mit
