--- a/jollix/public_html/de/de_home.html
+++ b/jollix/public_html/de/de_home.html
@@ -53,7 +53,7 @@
 		<tr>
 			<td valign="top">
 				<font size="+1"><b>News & Ankündigungen:<b></font><br><br>
-				<b><i>22.10.03</i></b> - <b>Jollix 0.2 ist fertig</b> und kann hier heruntergrladen werden:<br>
+				<b><i>22.10.03</i></b> - <b>Jollix 0.2 ist fertig</b> und kann hier heruntergeladen werden:<br>
 				<br><br>
 				<b><i>05.09.03</i></b> - <b>Jollix 0.2-beta steht in Kürze zum Download bereit.</b><br>
 				Die Version 0.2-beta von jollix ist fertig und wird - wenn alles klappt - im Laufe des Tages für die
