--- a/jollix/public_html/de/de_news.html
+++ b/jollix/public_html/de/de_news.html
@@ -43,7 +43,21 @@
 	<table>
 		<tr>
 			<td valign="top"><font size="+1"><b>News:<b></font><br><br>
-				<b><i>19.10.03</i></b> - <b>Jollix 0.2 ist fertig</b> und kann hier heruntergeladen werden:<br>
+				<b><i>22.10.03</i></b> - <b>Jollix 0.2 ist fertig</b> und
+				<a href="http://developer.berlios.de/projects/jollix/" target="_blank">kann hier heruntergeladen werden.</a><br>
+				Die Version 0.2 ist die zweite Beta-Release von jollix. Die wichtigsten Erweiterungen gegenüber
+				der Version 0.1.1 sind die Unterstützung von ATI Radeon Grafikkarten, ISDN-Karten und der
+				FritzCard DSL von AVM. Jollix bringt viele Internet- und Multimedia Anwendungen gleich mit,
+				u.a. Kopete (ICQ-Klient), KVIRC, XQF (Gameserver Browser), Kaffeine (Mediaplayer) und TVTime
+				(Fernsehapplikation). Eine ausführliche Liste der wichtigsten Programme ist
+				<a href="http://www.jollix.de/common/packets.html">hier zu finden</a>.
+				Eine Festplatteninstallation von jollix ist für erfahrene Benutzer mit Hilfe einer Anleitung
+				nun ebenfalls möglich. Für eine spätere Version von jollix ist ein einfaches grafisches
+				Installationsprogramm geplant.
+				Jollix ist optimiert für die i686 Architektur und bringt einen auf Spiele optimierten
+				Linux Kernel mit (gaming-sources). NVIDIA (TNT- Geforce 5900 FX) und ATI Radeon Karten
+				(8500-9800) werden mit voller OpenGL 3D Beschleunigung unterstützt. Das ISO-Image zum Brennen
+				der jollix CD ist 506 MB groß.
 				<br><br>
 				<b><i>05.09.03</i></b> - <b>Jollix 0.2-beta steht in Kürze zum Download bereit.</b><br>
 				Die Version 0.2-beta von jollix ist fertig und wird - wenn alles klappt - im Laufe des Tages für die
@@ -64,7 +78,7 @@
 				erschienen.</a></b> Seit heute ist Gentoo Linux 1.4 als LiveCD zum
 				<a href="http://www.gentoo.org/main/en/mirrors.xml" target="blank">Download freigegeben</a>.
 				Die Arbeit an Jollix 0.2 geht deshalb langsam in die Betatest-Phase über.<br>
-				Die <a href="http://graphics.cs.uni-sb.de/NMM/index.html target="blank">
+				Die <a href="http://graphics.cs.uni-sb.de/NMM/index.html" target="blank">
 				NETWORK-INTEGRATED MULTIMEDIA MIDDLEWARE</a> für Linux (NMM) ist ein Projekt
 				an der <a href="http://graphics.cs.uni-sb.de" target="blank">Universität des Saarlandes</a>,
 				das eine Infrastruktur zwischen vernetzten Multimedia-Geräten (PCs, Kameras, Handhelds
