--- a/jollix/public_html/de/de_home.html
+++ b/jollix/public_html/de/de_home.html
@@ -54,7 +54,7 @@
 			<td valign="top">
 				<font size="+1"><b>News & Ankündigungen:<b></font><br><br>
 				<b><i>22.10.03</i></b> - <b>Jollix 0.2 ist fertig</b> und
-				<a href="http://developer.berlios.de/projects/jollix/" target="_blank">kann hier heruntergeladen werden.</a><br>
+				<a href="http://developer.berlios.de/project/showfiles.php?group_id=666&release_id=1366" target="_blank">kann hier heruntergeladen werden.</a><br>
 				Die Version 0.2 ist die zweite Beta-Release von jollix. Die wichtigsten Erweiterungen gegenüber
 				der Version 0.1.1 sind die Unterstützung von ATI Radeon Grafikkarten, ISDN-Karten und der
 				FritzCard DSL von AVM. Jollix bringt viele Internet- und Multimedia Anwendungen gleich mit,
