--- a/jollix/public_html/de/de_download.html
+++ b/jollix/public_html/de/de_download.html
@@ -43,7 +43,7 @@
 	<table>
 		<tr>
 			<td valign="top">
-				<b>Aktuelle Version <a href="http://developer.berlios.de/project/showfiles.php?group_id=666&release_id=865" target="parent">jollix 0.2</a> [22.10.2003]</b><br><br>
+			<!--	<b>Aktuelle Version <a href="http://developer.berlios.de/project/showfiles.php?group_id=666&release_id=865" target="parent">jollix 0.2</a> [22.10.2003]</b><br><br>
 				<b>Download Mirrors:</b><br>
 				<ul>
 					<li>Germany:<br>
@@ -56,7 +56,7 @@
 					<li>North America:<br>
 					Atlanta: <a href="ftp://ftp-linux.cc.gatech.edu/pub/linux/distributions/jollix">ftp://ftp-linux.cc.gatech.edu/pub/linux/distributions/jollix</a><br>
 					ibiblio: <a href="ftp://ibiblio.org/pub/linux/distributions/jollix">ftp://ibiblio.org/pub/linux/distributions/jollix</a></li>
-				</ul>
+				</ul> -->
 				<b>Changelog:</b><br>
 				<ul>
 					<li></li>
