commented out mirrors

--- a/jollix/public_html/de/de_download.html
+++ b/jollix/public_html/de/de_download.html
@@ -43,9 +43,10 @@
 	<table>
 		<tr>
 			<td valign="top">
-			<!--	<b>Aktuelle Version <a href="http://developer.berlios.de/project/showfiles.php?group_id=666&release_id=865" target="parent">jollix 0.2</a> [22.10.2003]</b><br><br>
+				<b>Aktuelle Version <a href="http://developer.berlios.de/project/showfiles.php?group_id=666&release_id=865" target="parent">jollix 0.2</a> [22.10.2003]</b><br><br>
 				<b>Download Mirrors:</b><br>
-				<ul>
+				vorübergehend deaktiviert
+				<!--<ul>
 					<li>Germany:<br>
 					Berlin: <a href="ftp://ftp.fu-berlin.de/unix/linux/mirrors/sunsite.unc.edu/distributions/jollix">ftp.fu-berlin.de/unix/linux/mirrors/sunsite.unc.edu/distributions/jollix</a><br>
 					Göttingen: <a href="ftp://ftp.gwdg.de/pub/linux/mirrors/sunsite/distributions/jollix">ftp://ftp.gwdg.de/pub/linux/mirrors/sunsite/distributions/jollix</a></li>
