--- a/jollix/public_html/de/de_download.html
+++ b/jollix/public_html/de/de_download.html
@@ -45,7 +45,7 @@
 			<td valign="top">
 				<b>Aktuelle Version <a href="http://developer.berlios.de/project/showfiles.php?group_id=666&release_id=865" target="parent">jollix 0.2</a> [22.10.2003]</b><br><br>
 				<b>Download Mirrors:</b><br>
-				vorübergehend deaktiviert
+				vorübergehend deaktiviert<br>
 				<!--<ul>
 					<li>Germany:<br>
 					Berlin: <a href="ftp://ftp.fu-berlin.de/unix/linux/mirrors/sunsite.unc.edu/distributions/jollix">ftp.fu-berlin.de/unix/linux/mirrors/sunsite.unc.edu/distributions/jollix</a><br>
