--- a/jollix/public_html/de/de_download.html
+++ b/jollix/public_html/de/de_download.html
@@ -43,9 +43,13 @@
 	<table>
 		<tr>
 			<td valign="top">
-				<b>Aktuelle Version <a href="http://developer.berlios.de/project/showfiles.php?group_id=666&release_id=865" target="parent">jollix 0.2</a> [22.10.2003]</b><br><br>
+				<b>Aktuelle Version:</b><br>
+				<ul>
+					<li><a href="http://developer.berlios.de/project/showfiles.php?group_id=666&release_id=865" target="parent">jollix 0.2</a>
+					[22.10.2003] ~500MB (berlios.de)</li>
+				</ul>
 				<b>Download Mirrors:</b><br>
-				vorübergehend deaktiviert<br>
+				vorübergehend deaktiviert<br><br>
 				<!--<ul>
 					<li>Germany:<br>
 					Berlin: <a href="ftp://ftp.fu-berlin.de/unix/linux/mirrors/sunsite.unc.edu/distributions/jollix">ftp.fu-berlin.de/unix/linux/mirrors/sunsite.unc.edu/distributions/jollix</a><br>
@@ -58,14 +62,7 @@
 					Atlanta: <a href="ftp://ftp-linux.cc.gatech.edu/pub/linux/distributions/jollix">ftp://ftp-linux.cc.gatech.edu/pub/linux/distributions/jollix</a><br>
 					ibiblio: <a href="ftp://ibiblio.org/pub/linux/distributions/jollix">ftp://ibiblio.org/pub/linux/distributions/jollix</a></li>
 				</ul> -->
-				<b>Changelog:</b><br>
-				<ul>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-				</ul>
-				<hr align="middle" width="50%"><br>
+				<hr><br>
 				<b>Frühere Versionen</b>:<br>
 				<ul>
 					<li>jollix 0.1.1 [30.04.2003]<br>
